apps/sure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sure
  namespace: apps
spec:
  selector:
    app: sure-web
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
