apps/sure/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sure
  namespace: apps
spec:
  ingressClassName: traefik
  rules:
    - host: sure.stoneforge.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sure
                port:
                  number: 3000
